[tool.poetry]
name = "synthra-backend"
version = "0.1.0"
description = ""
authors = ["Delemangi <milev.stefan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.x"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = "^1.7.4"
python-multipart = "^0.0.9"
pydantic-settings = "^2.2.1"
APScheduler = "^3.10.4"
discord-webhook = "^1.3.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.4"
pre-commit = "^3.7.1"
types-python-jose = "^3.3.4.20240106"
types-passlib = "^1.7.7.20240327"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.ruff]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # mccabe
  "C90",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
  # flake8-2020
  "YTT",
  # flake8-annotations
  "ANN",
  # flake8-bandit
  "S",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-quotes
  "Q",
  # flake8-pie
  "PIE",
  # flake8-pyi
  "PYI",
  # flake8-return
  "RET",
  # flake8-simplify
  "SIM",
  # flake8-unused-arguments
  "ARG",
  # flake8-use-pathlib
  "PTH",
  # pylint
  "PL",
  # ruff
  "RUF",
]
line-length = 100
target-version = "py311"
ignore = ["A003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
